--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div class="flex-container1">
 <div class="item1">
 <ul>
+<li><a href="Go言語苦手だけど、何故か良い言語だなと思ってしまう話.html">Go言語苦手だけど、何故か良い言語だなと思ってしまう話 - 2022・08・03</a>  </li>
 <li><a href="jamでブログを始める.html">jamでブログを始める - 2022・08・02</a>  </li>
 </ul>
 </div>
